# GeneGIS

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  nagoya-density.html
.cursor/rules/: git-no-coauthor.mdc
.githooks/: prepare-commit-msg
.github/workflows/: ci.yml
apps/desktop/: README.md  package-lock.json  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/ui/: app.js  index.html  styles.css
apps/workbench/: Cargo.toml  README.md
apps/workbench/src/: main.rs
crates/genegis-agent/: Cargo.toml
crates/genegis-agent/src/: audit.rs  error.rs  lib.rs  model.rs  orchestrator.rs  remote.rs  tool_registry.rs
crates/genegis-ai/: Cargo.toml
crates/genegis-ai/src/: backend.rs  error.rs  intent.rs  lib.rs  llm.rs  planner.rs  resolver.rs  stac_url.rs  tool_call.rs
crates/genegis-analysis/: Cargo.toml
crates/genegis-analysis/src/: error.rs  export.rs  lib.rs  nagoya.rs  pipeline.rs  preview.rs  result.rs
crates/genegis-catalog/: Cargo.toml
crates/genegis-catalog/src/: catalog.rs  dataset.rs  error.rs  external_stac.rs  lib.rs  lookup.rs  stac.rs
crates/genegis-cli/: Cargo.toml
crates/genegis-cli/src/: main.rs
crates/genegis-collab/: Cargo.toml
crates/genegis-collab/src/: branch.rs  comment.rs  crdt.rs  document.rs  error.rs  lib.rs  remote.rs  session.rs
crates/genegis-core/: Cargo.toml
crates/genegis-core/src/: command.rs  layer.rs  lib.rs  project.rs  provenance.rs  source.rs  view.rs  workspace.rs
crates/genegis-crs/: Cargo.toml
crates/genegis-crs/src/: lib.rs
crates/genegis-ffi/: Cargo.toml
crates/genegis-ffi/src/: lib.rs
crates/genegis-geometry/: Cargo.toml
crates/genegis-geometry/src/: area.rs  bbox.rs  lib.rs  point.rs  polygon.rs
crates/genegis-plugin-api/: Cargo.toml
crates/genegis-plugin-api/src/: capability.rs  error.rs  lib.rs  manifest.rs  policy.rs  version.rs
crates/genegis-plugin-host/: Cargo.toml
crates/genegis-plugin-host/src/: discover.rs  error.rs  lib.rs  loader.rs
crates/genegis-pointcloud/: Cargo.toml
crates/genegis-pointcloud/src/: copc.rs  error.rs  http_source.rs  lib.rs  runtime.rs
crates/genegis-query/: Cargo.toml
crates/genegis-query/src/: duckdb.rs  error.rs  lib.rs
crates/genegis-raster/: Cargo.toml  build.rs
crates/genegis-raster/src/: cog.rs  error.rs  lib.rs
crates/genegis-render/: Cargo.toml
crates/genegis-render/examples/: canvas_prototype.rs  choropleth_nagoya.rs
crates/genegis-render/src/: canvas.rs  choropleth.rs  lib.rs  tiled_lod.rs
crates/genegis-render/src/shaders/: choropleth.wgsl
crates/genegis-server/: Cargo.toml
crates/genegis-server/src/: agent_store.rs  api.rs  lib.rs  main.rs  store.rs
crates/genegis-server/tests/: agent_api_e2e.rs
crates/genegis-spatial-index/: Cargo.toml
crates/genegis-spatial-index/src/: lib.rs
crates/genegis-storage/: Cargo.toml
crates/genegis-storage/src/: asset.rs  error.rs  http.rs  lib.rs  range.rs
crates/genegis-style/: Cargo.toml
crates/genegis-style/src/: choropleth.rs  lib.rs
crates/genegis-testkit/: Cargo.toml
crates/genegis-testkit/src/: error.rs  harness.rs  lib.rs  pipeline.rs  render.rs
crates/genegis-tile/: Cargo.toml
crates/genegis-tile/src/: lib.rs
crates/genegis-vector/: Cargo.toml
crates/genegis-vector/examples/: write_nagoya_geoparquet.rs
crates/genegis-vector/src/: dataset.rs  error.rs  geojson.rs  geometry.rs  geoparquet.rs  lib.rs
crates/genegis-wasm/: Cargo.toml
crates/genegis-wasm/src/: lib.rs
crates/genegis-workflow/: Cargo.toml
crates/genegis-workflow/src/: graph.rs  lib.rs  operation.rs  review.rs  step.rs
docs/adrs/: 0002-crdt-backend.md  0003-agent-trust-boundary.md
docs/architecture/: ai-native.md  overview.md  rendering.md
docs/assets/: hero-done.html  hero-running.html
docs/guides/: agent-orchestration.md  plugin-author.md
docs/rfcs/: 0001-master-architecture.md
docs/roadmap/: phase-0-foundation.md  phase-1-mvp.md  phase-10-federated-catalog.md  phase-2-alpha.md  phase-3-beta.md  phase-4-plugins.md  phase-5-collab.md  phase-6-autonomous.md  phase-7-release.md  phase-8-intent-expansion.md  phase-9-external-data.md
examples/copc-metadata/: Cargo.toml  README.md
examples/copc-metadata/src/: main.rs
examples/nagoya-population-density/: Cargo.toml
examples/nagoya-population-density/data/: README.md  nagoya-population-2020.json  nagoya-wards.geojson
examples/nagoya-population-density/src/: main.rs
examples/stac/: sample-collection.json  sample-item.json
plugins/demo-filter/: genegis.plugin.json
scripts/: build-nagoya-wards.py  render-readme-hero.sh
