[package]
name = "genegis-workbench"
description = "GeneGIS local web workbench (Tauri-free desktop MVP launcher)"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "genegis-workbench"
path = "src/main.rs"

[dependencies]
axum = "0.8"
genegis-analysis = { path = "../../crates/genegis-analysis" }
genegis-collab = { path = "../../crates/genegis-collab" }
genegis-plugin-host = { path = "../../crates/genegis-plugin-host" }
open = "5"
serde = { workspace = true }
serde_json.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
