[package]
name = "genegis-agent"
description = "GeneGIS multi-agent orchestration — plan, execute, verify traces"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
genegis-ai = { path = "../genegis-ai" }
genegis-analysis = { path = "../genegis-analysis" }
genegis-catalog = { path = "../genegis-catalog" }
genegis-vector = { path = "../genegis-vector" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ureq = "3"
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
