[package]
name = "genegis-ai"
description = "GeneGIS AI engine: intent parsing and workflow planning"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
genegis-catalog = { path = "../genegis-catalog" }
genegis-workflow = { path = "../genegis-workflow" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ureq = { version = "3", features = ["json"] }

[dev-dependencies]
