[package]
name = "genegis-catalog"
description = "GeneGIS catalog engine — dataset metadata registry"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
genegis-geometry = { path = "../genegis-geometry" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
