[package]
name = "genegis-core"
description = "GeneGIS core: project model, layer graph, command bus, provenance"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lib]
doctest = true
