[package]
name = "genegis-plugin-host"
description = "GeneGIS WASM plugin host — manifest gate and module loader"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
genegis-plugin-api = { path = "../genegis-plugin-api" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
wasmtime = "39"

[dev-dependencies]
tempfile = "3"
wat = "1"
