[package]
name = "genegis-query"
description = "GeneGIS query engine: DuckDB adapter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
duckdb.workspace = true
thiserror.workspace = true

[dev-dependencies]
