[package]
name = "genegis-raster"
description = "GeneGIS raster engine — COG / GeoTIFF read"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
geotiff-reader = { version = "0.6.1", features = ["cog"] }
genegis-storage = { path = "../genegis-storage" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
geotiff-writer = "0.6.1"
ndarray = "0.17"
tempfile = "3"
