[package]
name = "genegis-server"
description = "GeneGIS Server — collab session sync prototype (HTTP JSON)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "genegis_server"
path = "src/lib.rs"

[[bin]]
name = "genegis-server"
path = "src/main.rs"

[dependencies]
axum = "0.8"
genegis-agent = { path = "../genegis-agent" }
genegis-collab = { path = "../genegis-collab" }
serde = { workspace = true }
serde_json.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
uuid.workspace = true
genegis-core = { path = "../genegis-core" }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
