[package]
name = "genegis-testkit"
description = "GeneGIS benchmark and regression test harness"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
genegis-analysis = { path = "../genegis-analysis" }
genegis-render = { path = "../genegis-render" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
