[package]
name = "genegis-workflow"
description = "GeoWorkflow IR: analysis and AI workflow graph schema"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
